# XCSoar

./: ARCHITECTURE_SUMMARY.md  BUILD_CHECKLIST.md  BUILD_INTEGRATION.md  BUILD_STATUS.md  BUILD_VISUALIZATION.md  CMakeLists.txt  CMakeSource.cmake  FLIGHT_INFRASTRUCTURE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  VERIFICATION_REPORT.md
.github/workflows/: build-personal.yml  build-quick.yml
Data/: CMakeLists.txt
Data/Input/: default.xci
ide/provisioning/: install-debian-packages.sh
lib/libgeotiff/patches/: tiff_pkg_config
lib/netcdf/patches/: fix_dwinpath.patch  fix_windows.patch  series
lib/proj/patches/: include_mutex  series
po/: CMakeLists.txt
src/: DataGlobals.cpp  DataGlobals.hpp  FlightInfo.hpp  LogbookEntry.cpp  LogbookEntry.hpp  PopupMessage.cpp  Startup.cpp  UISettings.cpp
src/Android/: Bitmap.hpp
src/Device/: CMakeLists.txt  Descriptor.cpp  Descriptor.hpp  Driver.cpp  Driver.hpp
src/Device/Driver/CAI302/: Declare.cpp  Internal.hpp  Logger.cpp
src/Device/Driver/FLARM/: Device.hpp  Logger.cpp
src/Device/Driver/Flytec/: Device.hpp  Logger.cpp
src/Device/Driver/IMI/: Internal.hpp  Logger.cpp
src/Device/Driver/LX/: Internal.hpp  Logger.cpp  NanoLogger.cpp  NanoLogger.hpp
src/Device/Driver/LX_EOS/: LXEosDevice.hpp  LXEosDownload.cpp
src/Device/Driver/Volkslogger/: Internal.hpp  Logger.cpp
src/Device/Port/: Port.cpp
src/Dialogs/: CMakeSource.cmake
src/Dialogs/Device/: DeviceListDialog.cpp
src/Dialogs/Settings/Panels/: LayoutConfigPanel.cpp  WeatherConfigPanel.cpp
src/Dialogs/StatusPanels/: TaskStatusPanel.cpp  TaskStatusPanel.hpp
src/Dialogs/Weather/: SkysightDialog.cpp  WeatherDialog.cpp
src/Form/: Edit.cpp
src/Form/DataField/: Base.hpp
src/Gauge/: CMakeLists.txt
src/Geo/: GeoBounds.cpp  GeoBounds.hpp
src/IGC/: IGCFileMatcher.cpp  IGCFileMatcher.hpp
src/InfoBoxes/: InfoBoxWindow.cpp  InfoBoxWindow.hpp
src/InfoBoxes/Content/: Airspace.cpp  Airspace.hpp  Alternate.hpp  Base.cpp  Base.hpp  Contest.hpp  Factory.cpp  Factory.hpp  InfoBoxList.inc  Task.hpp  Team.hpp  Thermal.hpp  Trace.hpp  Type.hpp  Weather.hpp
src/Language/: CMakeLists.txt
src/Logger/: ExternalLogger.cpp  FlightParser.cpp  LogbookGlue.cpp  LogbookGlue.hpp  LogbookWriter.cpp  LogbookWriter.hpp
src/Look/: CMakeLists.txt  NextArrowLook.cpp
src/MapWindow/: CMakeSource.cmake  GlueMapWindowItems.cpp  GlueMapWindowOverlays.cpp  MapWindow.cpp  MapWindow.hpp  MapWindowEvents.cpp  MapWindowRender.cpp  OverlayBitmap.cpp
src/Math/: CMakeLists.txt  Classify.hpp
src/Menu/: ExpandMacros.cpp
src/OpenVario/: CMakeSource.cmake
src/Profile/: InfoBoxConfig.cpp  Keys.hpp  WeatherProfile.cpp
src/Renderer/: ClimbChartRenderer.cpp
src/Topography/: CMakeLists.txt
src/Topography/shapelib/: mapshape.c
src/Weather/: CMakeLists.txt  CMakeSource.cmake  Features.hpp  Settings.hpp
src/Weather/Skysight/: APIGlue.hpp  APIQueue.cpp  APIQueue.hpp  CDFDecoder.cpp  CDFDecoder.hpp  Layers.hpp  Metrics.hpp  Request.cpp  Request.hpp  SkySightCoRequest.cpp  SkySightCoRequest.hpp  Skysight.cpp  Skysight.hpp  SkysightAPI.cpp  SkysightAPI.hpp  SkysightRegions.cpp  SkysightRegions.hpp  SkysightRenderer.cpp  SkysightRenderer.hpp
src/event/: CMakeLists.txt
src/io/: BufferedOutputStream.cxx
src/net/: CMakeLists.txt
src/net/http/: CoDownloadToFile.cpp  CoDownloadToFile.hpp  Init.cpp
src/system/: Path.hpp
src/time/: DateTime.hpp
src/ui/: CMakeLists.txt  CMakeSource.cmake
src/ui/canvas/: Bitmap.hpp
src/ui/canvas/custom/: GeoBitmap.cpp  GeoBitmap.hpp
src/ui/canvas/gdi/: Bitmap.cpp  GdiPlusBitmap.cpp  GdiPlusBitmap.hpp
src/util/: CMakeLists.txt  PackedFloat.hxx  StringFormat.hpp
test/src/: CMakeLists.txt  CMakeSource.cmake  RunMapWindow.cpp
tools/python/: create_resource.py
